@@ -1,3 +1,6 @@
+2004-09-01  Jeremy Cribb <jcribb@email.unc.edu>
+	* added heavi.m, which will output Heaviside function with delay.
+
 2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>
 
 	* Initial Version
